2008-02-06: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Canonicalization/DkCommon.pm, DkimCommon.pm:
   bugfix for issue #1878954 (undef value used as an ARRAY ref)
 * lib/Mail/DKIM/Canonicalization/DkCommon.pm: some cleanup,
   possible bugfix for verifying message with two+ DomainKey signatures
 * lib/Mail/DKIM/Verifier.pm: allow caller of fetch_author_policy() to
   specify domain (#1879197)
 * lib/Mail/DKIM/PrivateKey.pm: cleanup- indentation style;
   throw error on load() if missing argument

2008-01-24: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/DkimPolicy.pm, Policy.pm, PublicKey.pm, Verifier.pm:
   fix parsing regexes used to split email address into localpart and
   domain (issue #1878994)

 -- VERSION 0.30.1 --

2008-01-24: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Algorithm/*: implement wants_pre_signature_headers()
   for each algorithm
 * lib/Mail/DKIM/Verifier.pm: if the algorithm "wants_pre_signature_headers",
   then feed headers found prior to the signature to the
   signature-specific algorithm doing the verification. This fixes an
   issue where signatures from cisco.com fail to verify (reported by
   Mark Martinec).

2008-01-10: Jason Long <jlong@messiah.edu>
 * Makefile.PL: bump version
 * lib/Mail/DKIM/Signature.pm: make sure all public key problems are
   prefixed with "public key:" (most were already, see below for actual
   changes)
 * lib/Mail/DKIM/PublicKey.pm: since Signature.pm is providing the "public
   key:" prefix, it can be omitted in PublicKey.pm error messages
 * lib/Mail/DKIM/Verifier: the following result_detail messages have changed:
     "no public key available" => "public key: not available"
     "key value list syntax error" => "syntax error"
                                   or "public key: syntax error"
 * t/verifier.t: test that "public key" is mentioned

 -- VERSION 0.30 --

2007-12-10: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Verifier.pm (is_subdomain): do case-insensitive
   comparison